<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/windowTitleSize"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/navigation_wallet"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/myIdentitiesButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_person_black_24dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/navigation_wallet"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_below="@id/toolbar2"
        app:layout_constraintBottom_toBottomOf="@id/toolbar2"
        app:layout_constraintEnd_toEndOf="@id/toolbar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_tokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_tokens" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_assets" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_vouchers" />
    </android.support.design.widget.TabLayout>

    <io.forus.me.views.wallet.WalletPager
        android:id="@+id/wallet_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigation_wallet">

    </io.forus.me.views.wallet.WalletPager>

</RelativeLayout>